# sistemi-operativi

./: .gitignore  AUTHORS.md  CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md  reference.md
.github/: pull_request_template.md
.github/workflows/: formatter.yaml  lint.yaml
include/: list.h  macros.h  namespace.h  process.h  semaphore.h  types.h  utils.h
include/phase1/: ash.h  ns.h  process.h
include/phase2/: def-syscall.h  devices.h  exceptions.h  globals.h  nucleus.h  scheduler.h  syscall.h
include/utils/: utils.h
lib/: container_of.h  hash.h  hashtable.h  list.h  log2.h  pandos_const.h  pandos_types.h  types.h
phase1/: p1test.c  process.c  utils.c
phase2/: devices.c  exceptions.c  globals.c  nucleus.c  scheduler.c  syscall.c  test.c
src/: list.h  macros.h  main.c  namespace.c  namespace.h  p1test.c  process.c  process.h  semaphore.c  semaphore.h  utils.c
test/: p1test.c  p2test.c
